# jq

./: TDX_Final.def  simple_test.c  test_simple.c
JoinQuantStrat/: 5m_beichi_3_stage_analysis.py  5m_beichi_3_stage_analysis_enchanced.py  5m_beichi_3_stage_strategy.py  chan3rdbuy_chansector.py  chan_early_filter.py  chan_early_filter_analysis.py  low_valuation_regression_chan_filter_1d_strategy.py  low_valuation_regression_chan_filter_1d_strategy_clean_jq.py  low_valuation_regression_chan_filter_1d_strategy_full.py  low_valuation_regression_chan_filter_1d_strategy_full_gj.py  low_valuation_regression_chan_filter_1d_strategy_gj.py  money_flow_two_phase_analysis.py  sector_overheat_analysis.py
JoinQuantStrat/Technical Analysis/: cash_flow_analysis.py  cash_flow_analysis2.py  head_goat_herd_strat.py  herd_strat.py  macd.py  macd2.py  macd2_modified.py  macd3.py  macd_strat.py  macd_strat2.py  macd_strat_180.py  macd_strat_54.py  macd_strat_II2_modified.py  macd_strat_II_stable.py  macd_strat_best.py  two_eight_strat.py  two_eight_strat_4500.py  two_eight_strat_high.py  two_eight_strat_trade.py
JoinQuantStrat/Utility/: ML_kbar_prep.py  ML_main.py  ML_model_prep.py  MMM_sp.py  biaoLiStatus.py  centralRegion.py  chanMatrix.py  chan_common_include.py  chan_kbar_filter.py  check_email_for_signal.py  chip_migration.py  chip_migration_II.py  common_include.py  config.py  drawKChart.py  dynamic_factor_based_stock_ranking.py  equilibrium.py  factor_analyzer.py  herd_head.py  kBarProcessor.py  kBar_Chan.py  macd_divergence.py  machine_learning_next_day.py  machine_learning_strat_analysis.py  market_timing.py  ml_factor_rank.py  moving_avg.py  oop_adjust_pos.py  oop_record_stats.py  oop_select_stock.py  oop_sort_stock.py  oop_stop_loss.py  oop_strategy_frame.py  pair_trading_ols.py  quant_lib.py  (+10 more)
tdx_chan_plugin/: CMakeLists.txt  ChanAnalyzer.cpp  ChanPlugin.h  ChanTheory_Compliance_Analysis.md  DEFINEBI_REWRITE_PLAN.md  KBarChan_Simple_Formula.txt  Main.cpp  PYTHON_PLAN_A_REWRITE_PLAN.md  README.md  TDXChanPlugin.def  TDXChanPlugin_BUGFIX_PLAN.md  TDXChanPlugin_FinalMatch.def  TDXChanPlugin_Simple_NoChinese.txt  TDXPlugin.cpp  TDXPlugin_FinalMatch.cpp  build.bat  build_simple.bat  build_with_cmake.bat  build_with_cmake64.bat  build_x86.bat  kBar_Chan.py  task_progress.md  test_main.cpp  通达信插件安装说明.md
tdx_chan_plugin/.continue/rules/: CONTINUE.md
(+46 files in other folders)
